--- a/Style/SellerPageStyle.css
+++ b/Style/SellerPageStyle.css
@@ -246,4 +246,12 @@ input {
   display: none;
 }
 
+#PassValidation {
+    display: none;
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 10px;
+    border-radius: 5px;
+  }
+
 
