--- a/Style/CheckOutStyle.css
+++ b/Style/CheckOutStyle.css
@@ -9,151 +9,154 @@
   align-items: center;
   padding: 20 20px;
   /* margin-top: -40; */
- 
 }
-
-
 
 .img {
   width: 200px;
   height: 65px;
   object-fit: contain;
-  margin-left: 35px;  
+  margin-left: 35px;
   padding-left: 25px;
-
 }
-#Logo{
+#Logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
- }
-
-
+}
 
 /* css of checkout */
 
 body {
-    font-family: Arial;
-    font-size: 17px;
-    padding: 8px;
-    background-color: #CBD2A4;
-   
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  .row {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap; 
-    flex-wrap: wrap;
-    margin: 0 -16px;
-  }
-  
-  .col-25 {
-    -ms-flex: 25%; 
-    flex: 25%;
-  }
-  
-  .col-50 {
-    -ms-flex: 50%; 
-    flex: 50%;
-  }
-  
-  .col-75 {
-    -ms-flex: 75%; 
-    flex: 75%;
-  }
-  
-  .col-25,
-  .col-50,
-  .col-75 {
-    padding: 0 16px;
-  }
-  
-  .container {
-    background-color: #7bbe5c;
-    margin-top: 100;
-    padding: 5px 20px 15px 20px;
-    border: 1px solid #5e8f47;
-    border-radius: 3px;
-  }
-  
-  input[type=text] {
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  label {
-    margin-bottom: 10px;
-    display: block;
-  }
-  
-  .icon-container {
-    margin-bottom: 20px;
-    padding: 7px 0;
-    font-size: 24px;
-  }
-  
-  .btn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px;
-    margin: 10px 0;
-    border: none;
-    width: 100%;
-    border-radius: 3px;
-    cursor: pointer;
-    font-size: 17px;
-  }
-  
-  .btn:hover {
-    background-color: #96753c;
-  }
-  
-  a {
-    color: #2196F3;
-  }
-  
-  hr {
-    border: 1px solid lightgrey;
-  }
-  
-  span.price {
-    float: right;
-    color: rgb(240, 240, 240);
-  }
+  font-family: Arial;
+  font-size: 17px;
+  padding: 8px;
+  background-color: #cbd2a4;
+}
+
+h1 {
+  text-align: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.row {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 0 -16px;
+}
+
+.col-25 {
+  -ms-flex: 25%;
+  flex: 25%;
+}
+
+.col-50 {
+  -ms-flex: 50%;
+  flex: 50%;
+}
+
+.col-75 {
+  -ms-flex: 75%;
+  flex: 75%;
+}
+
+.col-25,
+.col-50,
+.col-75 {
+  padding: 0 16px;
+}
+
+.container {
+  background-color: #7bbe5c;
+  margin-top: 100;
+  padding: 5px 20px 15px 20px;
+  border: 1px solid #5e8f47;
+  border-radius: 3px;
+}
+
+input[type="text"] {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+label {
+  margin-bottom: 10px;
+  display: block;
+}
+
+.icon-container {
+  margin-bottom: 20px;
+  padding: 7px 0;
+  font-size: 24px;
+}
+
+.btn {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  width: 100%;
+  border-radius: 3px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.btn:hover {
+  background-color: #96753c;
+}
+
+a {
+  color: #2196f3;
+}
+
+hr {
+  border: 1px solid lightgrey;
+}
+
+span.price {
+  float: right;
+  color: rgb(240, 240, 240);
+}
 
 select {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    background-color: #f2f2f2;
-    font-size: 17px;
-    margin-bottom: 20px;
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  background-color: #f2f2f2;
+  font-size: 17px;
+  margin-bottom: 20px;
 }
 
 select:focus {
-    border-color: #4CAF50;
-    outline: none;
+  border-color: #4caf50;
+  outline: none;
 }
-  
-  /* Responsive layout */
-  @media (max-width: 800px) {
-    .row {
-      flex-direction: column-reverse;
-    }
-    .col-25 {
-      margin-bottom: 20px;
-    }
+
+/* Responsive layout */
+@media (max-width: 800px) {
+  .row {
+    flex-direction: column-reverse;
   }
+  .col-25 {
+    margin-bottom: 20px;
+  }
+}
+
+#I-fullname,
+#I-phone,
+#I-address,
+#I-wilaya,
+#I-ville,
+#I-zip {
+  color: red;
+  display: none;
+}
