--- a/Style/Menu.css
+++ b/Style/Menu.css
@@ -375,6 +375,11 @@ a {
   margin-top: 10px;
 }
 
-.men{
-  
+.mwc-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+
 }
