--- a/Style/Footer.css
+++ b/Style/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #333;
+    background-color: #5e8f47;
     color: #fff;
     padding: 20px 0;
     margin-top: 30px;
@@ -22,7 +22,7 @@
 }
 
 .footer-column h3 {
-    border-bottom: 2px solid #ff4500;
+    border-bottom: 2px solid #9A7E6F;
     display: inline-block;
     margin-bottom: 10px;
 }
@@ -39,7 +39,7 @@
 }
 
 .footer-column ul li a:hover {
-    color: #ff4500;
+    color: #000000;
 }
 
 .newsletter-input {
@@ -51,7 +51,7 @@
 }
 
 .newsletter-button {
-    background-color: #ff4500;
+    background-color: #9A7E6F;
     border: none;
     padding: 8px 15px;
     color: #fff;
@@ -76,6 +76,6 @@
     text-align: center;
     padding: 10px 0;
     font-size: 14px;
-    border-top: 1px solid #444;
+    border-top: 1px solid #5e8f47;
     margin-top: 20px;
 }
